# Terminal-Autocarro

./: 1main.cpp  3nomes.h  5autocarros.cpp  6matricula.cpp  6matricula.h  8paragem.h  README.md
Projeto Autocarro/: 10imprimir.cpp  10imprimir.h  2estruturas.h  3nomes.cpp  4passageiro.cpp  4passageiro.h  5autocarros.h  7arvorebinaria.cpp  7arvorebinaria.h  8paragem.cpp  9menus.cpp  9menus.h  CMakeLists.txt
